--- a/css/picture-slide.css
+++ b/css/picture-slide.css
@@ -24,8 +24,8 @@
   font-size: 0;
   line-height: 0;
   display: block;
-  width: 20px;
-  height: 20px;
+  width: 12px;
+  height: 12px;
   cursor: pointer;
   color: transparent;
   outline: none;
